--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "SaludLaboralConnection": "Server=DESKTOP-FSGELDJ\\SQLEXPRESS;Database=SaludLaboral;User Id=sa;Password=admin;TrustServerCertificate=True;"
+        "SaludLaboralConnection": "Server=tcp:saludlaboralserverdb.database.windows.net,1433;Initial Catalog=SaludLaboral;Persist Security Info=False;User ID=janval;Password=Proyecto.Final;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        //"SaludLaboralConnection": "Server=DESKTOP-FSGELDJ\\SQLEXPRESS;Database=SaludLaboral;User Id=sa;Password=admin;TrustServerCertificate=True;"
     }
 
 }
